--- a/data/Application.css
+++ b/data/Application.css
@@ -3,8 +3,12 @@
     padding: 1rem;
 }
 
-.dialog toolbox .top header {
-    margin-top: 0;
+/*.dialog toolbox .top header {*/
+/*    margin-top: 0;*/
+/*}*/
+
+.dialog toolbox .top overlay {
+    min-width: calc((48px * 2) - 1em);
 }
 
 .dialog toolbox .top .large-icons {
